# ado

./: .copywrite.hcl  .dockerignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  Dockerfile-cpu  Dockerfile-gpu  pyproject.toml  requirements.txt  ruff.toml  tox.ini
.cra/: .cveignore
.cursor/agents/: operation-analyzer.md
.cursor/commands/: review.md
.cursor/rules/: plugin-development.mdc
backend/api/: ado-api-rayserve.yaml
backend/kuberay/: README.md  service-account.yaml  vanilla-ray.yaml
backend/mysql/: ensure_variable_is_defined.sh  forward_mysql_and_onboard_new_project.sh  onboard_new_project.sh
examples/density_example/: point.yaml
examples/ml-multi-cloud/: EXAMPLE_LHC.md  EXAMPLE_OBJECTIVE.md  EXAMPLE_SIMPLE.md  lhc_sampler.yaml  ml_multicloud_sample_store.yaml  ml_multicloud_space.yaml  ml_multicloud_space_with_custom.yaml  randomwalk_ml_multicloud_operation.yaml  raytune_ml_multicloud_operation.yaml  raytune_ml_multicloud_operation_custom_metric.yaml
examples/no-priors-characterization/: README.md
examples/no-priors-characterization/custom_experiments/: pyproject.toml
examples/no-priors-characterization/custom_experiments/no_priors_custom_experiments/: experiments.py
examples/optimization_test_functions/: README.md  operation_bayesopt.yaml  operation_nevergrad.yaml  point.yaml  space.yaml
examples/pfas-generative-models/: gen_models_molgx_test_sample_store.yaml  gen_models_transformer_test_sample_store.yaml  operation_random_walk_test.yaml  operation_transformer_benchmark.yaml  space_molgx_simple.yaml  space_transformer_simple.yaml  space_transformer_with_objective.yaml
examples/remote_operation/: execution_context_direct.yaml  execution_context_port_forward.yaml  runtime_env.yaml
examples/trim/: README.md
examples/trim/custom_experiments/: pyproject.toml
examples/trim/custom_experiments/trim_custom_experiments/: experiments.py
orchestrator/api/: rest.py
orchestrator/core/: __init__.py  metadata.py  resources.py
orchestrator/metastore/: base.py  project.py  sqlstore.py
orchestrator/modules/: module.py
orchestrator/schema/: domain.py  entity.py  entityspace.py  experiment.py  measurementspace.py  observed_property.py  point.py  property.py  property_value.py  reference.py  request.py  result.py  virtual_property.py
orchestrator/utilities/: async_task_runner.py  distribution.py  environment.py  location.py  logging.py  naming.py  output.py  pandas.py  pydantic.py  rich.py  run_experiment.py  (+2 more)
plugins/actuators/vllm_performance/: README.md  pyproject.toml
plugins/actuators/vllm_performance/ado_actuators/vllm_performance/: __init__.py  actuator.py  actuator_definitions.yaml  actuator_parameters.py  deployment_management.py  env_manager.py  experiment_executor.py  experiments.yaml
plugins/actuators/vllm_performance/ado_actuators/vllm_performance/baremetal/: create_environment.py
plugins/actuators/vllm_performance/ado_actuators/vllm_performance/experiments/: performance_testing.yaml  performance_testing_geospatial.yaml
plugins/actuators/vllm_performance/ado_actuators/vllm_performance/k8s/: __init__.py  create_environment.py  manage_components.py
plugins/actuators/vllm_performance/ado_actuators/vllm_performance/k8s/yaml_support/: build_components.py  deployment.yaml  pvc.yaml  service.yaml
plugins/actuators/vllm_performance/ado_actuators/vllm_performance/vllm_performance_test/: benchmark_models.py  execute_benchmark.py  execute_guidellm_benchmark.py  get_benchmark_results.py  guidellm_models.py
plugins/actuators/vllm_performance/yamls/: discoveryspace_override_defaults_small.yaml  operation_hyperopt.yaml  operation_optuna_multi.yaml  random_walk_operation.yaml  random_walk_operation_grouped.yaml  vllm_actuator_configuration.yaml  vllm_deployment_space.yaml  vllm_request_rate_space.yaml
plugins/operators/no-priors-characterization/: README.md  pyproject.toml  visualize_sampling.py
plugins/operators/no-priors-characterization/src/no_priors_characterization/: __init__.py  no_priors_sampler.py  operator.py
plugins/operators/no-priors-characterization/src/no_priors_characterization/utils/: __init__.py  high_dimensional_sampling.py  one_dimensional_sampling.py  order.py  space_df_connector.py
plugins/operators/ray_tune/: pyproject.toml
plugins/operators/ray_tune/ado_ray_tune/: config.py  doe.py  operator.py  operator_function.py  rifferla.py  rifferla_operation_debug.py  samplers.py  space_analysis.py  stoppers.py
plugins/operators/trim/: pyproject.toml
plugins/operators/trim/src/trim/: __init__.py  operator.py  trim_pydantic.py  trim_sampler.py
plugins/operators/trim/src/trim/utils/: __init__.py  exceptions.py  stopping_criterion.py
plugins/operators/trim/tests/: test_high_dimensional_sampling.py
plugins/operators/trim/trim/: no_priors_pydantic.py  no_priors_sampler.py  operator.py  trim_pydantic.py  trim_sampler.py
plugins/operators/trim/trim/test/: test_data_documentation.py  test_high_dimensional_sampling.py  test_rowsring.py  test_sampling.py
plugins/operators/trim/trim/utils/: high_dimensional_sampling.py  logging_utils.py  miscellaneous.py  order.py  rowsring.py  space_df_connector.py  split_common_and_diff.py
tests/: conftest.py  mysql_test_context.yaml  sqlite_test_context.yaml
website/: mkdocs.yml
(+371 files in other folders)
