[project]
name = "ado-vllm-performance"
description = "VLLM performance testing actuator for ado"
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["ado", "benchmarking", "llm", "performance", "testing", "vllm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "ado-core",
  "kubernetes>=31.0.0",
]
dynamic = ["version"]

[project.urls]
Changelog = "https://github.com/IBM/ado/blob/main/CHANGELOG.md"
Homepage = "https://ibm.github.io/ado/"
Issues = "https://github.com/IBM/ado/issues"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/IBM/ado"

[project.optional-dependencies]
guidellm = [
  "guidellm>=0.5.3",
]
vllm = [
  "vllm>=0.12.0,!=0.15.*;sys_platform!='darwin'",
]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true  # This is on by default, including it for clarity

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build", "build.*", "yamls", "docker_image"]

[tool.setuptools.package-data]
# Note: This is optional. If you don't specify every non python file that's in SCM will be added
vllm_performance = [
  "actuator_definitions.yaml",  # Required: The file that describes the actuator classes the plugin provides
  "experiments.yaml",  # Optional file that contains definitions for experiment catalog
]

[tool.setuptools_scm]
root = "../../../"

# Required when added as a workspace package
[tool.uv.sources]
ado-core = { workspace = true }
