[project]
name = "ado-trim"
description = "TRIM (Transfer Refined Iterative Modeling) builds an accurate predictive model from a small dataset by iteratively sampling a Discovery Space."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "ado-core",
  "ado-no-priors-characterization",
  "autogluon-tabular[catboost,xgboost]==1.5",
  "numpy",
  "pandas>=2.2.0",
  "scikit-learn",
]
dynamic = ["version"]

[project.entry-points."ado.operators"]
trim = "trim.operator"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["trim*"]

[tool.setuptools_scm]
root = "../../../"

[tool.uv.sources]
ado-core = { workspace = true }
ado-no-priors-characterization = { workspace = true }
